# Linear-Equation-Solver

./: CMakeLists.txt  Matrix.cpp  Matrix.h  main.cpp  plots.cpp  plots.h  tasks.cpp  tasks.h
